src/styles/globals.css
@import "tailwindcss";
@import "./pink.css";
@import "./black.css";

@theme inline {
  --color-scheme: var(--color-scheme);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-header-background: var(--header-background);
  --color-header-foreground: var(--header-foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary-light: var(--primary-light);
  --color-primary: var(--primary);
  --color-primary-dark: var(--primary-dark);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary-light: var(--secondary-light);
  --color-secondary: var(--secondary);
  --color-secondary-dark: var(--secondary-dark);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  --color-roma: var(--roma);
  --color-kana: var(--kana);
  --color-flick: var(--flick);
  --color-english: var(--english);
  --color-other: var(--other);
  --color-perfect: var(--perfect);
  --color-failure: var(--failure);
  --color-like: var(--like);

  --opacity-word-correct: var(--opacity-word-correct);
  --color-word-correct: var(--word-correct);
  --color-word-nextChar: var(--word-nextChar);
  --color-word-word: var(--word-word);
  --color-word-completed: var(--word-completed);
  --color-word-nextWord: var(--word-nextWord);

  --color-success: var(--success);
  --color-success-foreground: var(--success-foreground);
  --color-warning: var(--warning);
  --color-warning-foreground: var(--warning-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-info: var(--info);
  --color-info-foreground: var(--info-foreground);

  --color-discord: oklch(0.6474 0.1243 270.62);
  --color-google: oklch(0.6019 0.1898 28.87);
  --color-outline-text: var(--outline-text);
  --color-custom-card-shadow: var(--custom-card-shadow);
  --color-card-with-thumbnail: var(--card-with-thumbnail);
  --color-overlay-background: var(--overlay-background);
  --color-overlay-foreground: var(--overlay-foreground);
}

.default {
  --color-scheme: dark;
  --radius: 0.625rem;
  --background: oklch(0.2565 0.0092 234.09);
  --foreground: oklch(1 0 0);
  --header-background: oklch(0.458 0.0732 250.95);
  --header-foreground: oklch(1 0 0);
  --card: oklch(0.3063 0.0114 248.2);
  --card-foreground: oklch(1 0 0);
  --popover: oklch(0.2565 0.0092 234.09);
  --popover-foreground: oklch(1 0 0);
  --primary-light: oklch(0.7547 0.1375 239.62);
  --primary: oklch(0.5946 0.1398 250.3);
  --primary-dark: oklch(0.6611 0.1196 219.08);
  --primary-foreground: oklch(0.985 0 0);
  --secondary-light: oklch(0.7848 0.1267 182.05);
  --secondary: oklch(0.7048 0.158 160.55);
  --secondary-dark: oklch(0.6146 0.1368 161.02);
  --secondary-foreground: oklch(1 0 0);
  --muted: oklch(0.6167 0.0104 242.93);
  --muted-foreground: oklch(0.683 0 0);
  --accent: oklch(0.44 0.01 286);
  --accent-foreground: oklch(1 0 0);

  --border: oklch(0.922 0 0);
  --input: oklch(0.2565 0.0092 234.09);
  --ring: oklch(0.7547 0.1375 239.62);

  --roma: oklch(0.7138 0.12848 218.2724);
  --kana: oklch(0.6751 0.1566 54.98);
  --flick: oklch(0.8029 0.2208 141.97);
  --english: oklch(0.7253 0.1752 349.76);
  --other: oklch(0.5844 0.214 316.96);
  --perfect: oklch(0.8659 0.1708 89.58);
  --like: oklch(0.7253 0.1752 349.76);
  --failure: oklch(0.7012 0.1812 298.06);

  --opacity-word-correct: 1;
  --word-correct: oklch(0.5946 0.1398 250.3);
  --word-nextChar: oklch(1 0 0);
  --word-word: oklch(1 0 0);
  --word-completed: oklch(0.7864 0.1143 186.56);
  --word-nextWord: oklch(0.683 0 0);
  --word-outline-text:
    1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000, 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000,
    0 -1px 0 #000;

  --info: oklch(0.8021 0.1383 209.06);
  --info-foreground: oklch(0.985 0 0);
  --success: oklch(0.6576 0.1796 158.18);
  --success-foreground: oklch(0.985 0 0);
  --warning: oklch(0.6341 0.1944 48.28);
  --warning-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.5897 0.1964 19.86);
  --destructive-foreground: oklch(0.985 0 0);

  --outline-text:
    1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000, 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000,
    0 -1px 0 #000;
  --custom-card-shadow:
    var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
    var(--tw-shadow);
  --card-with-thumbnail: linear-gradient(
    to right,
    var(--color-background),
    color-mix(in oklch, var(--color-background) 80.7%, transparent)
  );
  --overlay-background: rgba(0, 0, 0, 0.7);
  --overlay-foreground: #ffffff;
}

@layer utilities {
  .input-mode-outline-text {
    text-shadow:
      0.5px 0.5px 0px rgba(0, 0, 0, 0.5),
      -0.5px 0.5px 0px rgba(0, 0, 0, 0.5),
      0.5px -0.5px 0px rgba(0, 0, 0, 0.5),
      -0.5px -0.5px 0px rgba(0, 0, 0, 0.5),
      0.5px 0px 0px rgba(0, 0, 0, 0.5),
      0px 0.5px 0px rgba(0, 0, 0, 0.5),
      -0.5px 0px 0px rgba(0, 0, 0, 0.5),
      0px -0.5px 0px rgba(0, 0, 0, 0.5);
  }

  .outline-text {
    text-shadow: var(--outline-text);
  }

  .word-outline-text {
    text-shadow: var(--word-outline-text);
  }

  .word-font {
    font-family:
      Segoe UI,
      "Yu Gothic",
      "YuGothic",
      sans-serif;
    font-weight: 600;
  }

  .custom-card-shadow {
    box-shadow: var(--custom-card-shadow);
  }

  .map-card-hover:hover {
    box-shadow:
      0 8px 13px -3px color-mix(in oklch, var(--color-secondary-light) 50%, transparent),
      0 3px 5px -2px color-mix(in oklch, var(--color-secondary-light) 30%, transparent) !important;
  }

  .hover-card-shadow-primary:hover {
    box-shadow:
      0 8px 13px -3px color-mix(in oklch, var(--color-primary-light) 50%, transparent),
      0 3px 5px -2px color-mix(in oklch, var(--color-primary-light) 30%, transparent) !important;
  }
}

@layer base {
  html {
    @apply bg-background text-foreground;
    background-color: var(--background);
    color: var(--foreground);
    color-scheme: var(--color-scheme);
    scrollbar-gutter: stable;
  }

  body[data-scroll-locked] {
    margin-right: 0 !important;
  }

  body {
    @apply bg-background text-foreground;
  }

  ::selection {
    background-color: var(--color-primary);
    color: var(--color-primary-foreground);
  }
}
progress {
  appearance: none;
  outline: solid 1.5px #000;
  border-radius: 5px;
}

progress::-webkit-progress-bar {
  background: color-mix(in oklch, var(--color-primary), transparent 90%);
}

